Fix the footer layout issues by moving it further in

--- a/public/stylesheets/mindapples.css
+++ b/public/stylesheets/mindapples.css
@@ -188,8 +188,8 @@ body {
       margin-top: 3px;
       color: white;
       overflow: hidden;
-      padding: 10px 50px 30px;
-      width: 1340px;
+      padding-top: 10px;
+      width: 1004px;
       margin-left: auto;
       margin-right: auto;}
       .outer_page_wrapper .inner_page_wrapper #footer .site-credits ul {
